[package]
name = "propulsion-system"
version = "0.1.0"
edition = "2024"

[dependencies]
# Server
actix-web = "4.10.2"
tokio = { version = "1.45.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
